# pam-ssw

./: .gitignore  LICENSE  PAM-SSW 开发手册 v0.1.md  README.md  benchmark_results_autoresearch_lj13_lj38_budget60.json  benchmark_results_lj13_lj38_budget60.json  benchmark_results_lj13_lj38_budget60.md  pyproject.toml  results.tsv  therory.md
benchmarks/: lj_cluster_compare.py
docs/: developer-parameters.md  direction-oracle-theory-and-plan.md  theoretical-analysis.md  vc-ssw-mvp-status.md
pamssw/: __init__.py  accounting.py  acquisition.py  archive.py  bias.py  calculators.py  cli.py  config.py  coordinates.py  fingerprint.py  generalized_bias.py  generalized_coordinates.py  generalized_directions.py  generalized_evaluator.py  generalized_relax.py  io.py  metric.py  pbc.py  potentials.py  relax.py  result.py  rigid.py  runner.py  softening.py  state.py  walker.py
runs/20260427-151600-epam-generalization/: artifacts.json  event_log.jsonl  lj13_smoke_m11.json  lj13_smoke_m11_diagnostics.json  lj38_seed0_depth_scan_m21.json  lj55_m22_h8_prop80.json  lj_quick_m12.json  lj_quick_m13_mode_node_policy.json  lj_quick_m17_benchmark_diagnostics.json  lj_quick_m18_rigid_projection.json  lj_quick_m19_relax_convergence_diagnostics.json  lj_quick_m20_lbfgsb_gtol.json  lj_quick_m22_h8_prop80.json  lj_quick_m22_h8_prop80_traces.json  plan.md  questions.md  run_manifest.yaml  status.md  summary.md
runs/20260428-102850-ase-baselines/: ASE_BASELINE_REPORT.md  artifacts.json  event_log.jsonl  lj13_38_ase_baselines.json  lj13_38_ase_budget20_metric.json  lj13_38_ase_budget20_traces.json  (+5 more)
(+558 files in other folders)
